make leaflet-view appear correctly on details page
Prior to this change, the map would grow too large. We want it to only get to 50% of the parent.
The CSS changes here relate to how React Native Web is injecting into the existing DOM structure. It uses a bunch of wrapper divs (of class names starting with 'css-view') and we want to make sure these are getting as big as, but only as big as, the containers they are injecting into.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1492,4 +1492,11 @@ html, #chart2, svg {
 div[class*='css-view'] {
   height: 100%;
   width: 100%;
+  position: absolute;
+}
+
+div[class*='css-view'] > div[class*='css-view'] {
+  position: static;
+  height: 100%;
+  width: 100%;
 }
